// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders dark without error 1`] = `
<DocumentFragment>
  <div>
    <div
      class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
      data-rbd-droppable-context-id="1"
      data-rbd-droppable-id="test"
    >
      <div
        class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="modjewrijfjwo"
      >
        <button
          aria-label="Insert Processors"
          class="MuiButtonBase-root"
          tabindex="0"
          title="Insert Processors"
          type="button"
        >
          <div
            class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
          >
            <div
              class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root Styled(Styled(MuiBox))-root Styled(Styled(MuiBox))-root"
            />
          </div>
          <div
            class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
            style="opacity: 0; visibility: hidden;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
          </div>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          aria-describedby="rbd-hidden-text-1-hidden-text-3"
          class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="modjewrijfjwo"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            tabindex="-1"
          >
            <div
              class="MuiPaper-root MuiCard-root WithStyles(ForwardRef(Card))-root WithStyles(ForwardRef(Card))-root MuiPaper-elevation1 MuiPaper-rounded"
              tabindex="0"
            >
              <div
                class="MuiCardHeader-root WithStyles(ForwardRef(CardHeader))-root WithStyles(ForwardRef(CardHeader))-root"
              >
                <div
                  class="MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
                  >
                    Geo
                  </span>
                  <span
                    class="MuiTypography-root MuiCardHeader-subheader MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                  >
                    MGRS
                  </span>
                </div>
                <div
                  class="MuiCardHeader-action"
                >
                  <div
                    style="opacity: 0; visibility: hidden;"
                  >
                    <button
                      aria-label="Edit name"
                      class="MuiButtonBase-root MuiIconButton-root WithNoOpener-root WithNoOpener-root"
                      tabindex="0"
                      title="Edit name"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                    <button
                      aria-label="Edit settings"
                      class="MuiButtonBase-root MuiIconButton-root WithNoOpener-root WithNoOpener-root"
                      tabindex="0"
                      title="Edit Settings"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19.44 12.99l-.01.02c.04-.33.08-.67.08-1.01 0-.34-.03-.66-.07-.99l.01.02 2.44-1.92-2.43-4.22-2.87 1.16.01.01c-.52-.4-1.09-.74-1.71-1h.01L14.44 2H9.57l-.44 3.07h.01c-.62.26-1.19.6-1.71 1l.01-.01-2.88-1.17-2.44 4.22 2.44 1.92.01-.02c-.04.33-.07.65-.07.99 0 .34.03.68.08 1.01l-.01-.02-2.1 1.65-.33.26 2.43 4.2 2.88-1.15-.02-.04c.53.41 1.1.75 1.73 1.01h-.03L9.58 22h4.85s.03-.18.06-.42l.38-2.65h-.01c.62-.26 1.2-.6 1.73-1.01l-.02.04 2.88 1.15 2.43-4.2s-.14-.12-.33-.26l-2.11-1.66zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                    <button
                      aria-label="Delete"
                      class="MuiButtonBase-root MuiIconButton-root WithNoOpener-root WithNoOpener-root"
                      tabindex="0"
                      title="Delete"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M6 21h12V7H6v14zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="MuiCardContent-root"
              >
                <div
                  class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
                  >
                    <p
                      class="MuiTypography-root WithStyles(ForwardRef(Typography))-root WithStyles(ForwardRef(Typography))-root WrappedTypography-root WrappedTypography-root MuiTypography-body1"
                    >
                      Extract MGRS coordinates, optionally ignoring MGRS coordinates that could be dates
                    </p>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Insert Processors"
        class="MuiButtonBase-root"
        tabindex="0"
        title="Insert Processors"
        type="button"
      >
        <div
          class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
        >
          <div
            class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root Styled(Styled(MuiBox))-root Styled(Styled(MuiBox))-root"
          />
        </div>
        <div
          class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
          style="opacity: 0; visibility: hidden;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders without error 1`] = `
<DocumentFragment>
  <div>
    <div
      class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
      data-rbd-droppable-context-id="0"
      data-rbd-droppable-id="test"
    >
      <div
        class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="modjewrijfjwo"
      >
        <button
          aria-label="Insert Processors"
          class="MuiButtonBase-root"
          tabindex="0"
          title="Insert Processors"
          type="button"
        >
          <div
            class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
          >
            <div
              class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root Styled(Styled(MuiBox))-root Styled(Styled(MuiBox))-root"
            />
          </div>
          <div
            class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
            style="opacity: 0; visibility: hidden;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
          </div>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="modjewrijfjwo"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            tabindex="-1"
          >
            <div
              class="MuiPaper-root MuiCard-root WithStyles(ForwardRef(Card))-root WithStyles(ForwardRef(Card))-root MuiPaper-elevation1 MuiPaper-rounded"
              tabindex="0"
            >
              <div
                class="MuiCardHeader-root WithStyles(ForwardRef(CardHeader))-root WithStyles(ForwardRef(CardHeader))-root"
              >
                <div
                  class="MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
                  >
                    Geo
                  </span>
                  <span
                    class="MuiTypography-root MuiCardHeader-subheader MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                  >
                    MGRS
                  </span>
                </div>
                <div
                  class="MuiCardHeader-action"
                >
                  <div
                    style="opacity: 0; visibility: hidden;"
                  >
                    <button
                      aria-label="Edit name"
                      class="MuiButtonBase-root MuiIconButton-root WithNoOpener-root WithNoOpener-root"
                      tabindex="0"
                      title="Edit name"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                    <button
                      aria-label="Edit settings"
                      class="MuiButtonBase-root MuiIconButton-root WithNoOpener-root WithNoOpener-root"
                      tabindex="0"
                      title="Edit Settings"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19.44 12.99l-.01.02c.04-.33.08-.67.08-1.01 0-.34-.03-.66-.07-.99l.01.02 2.44-1.92-2.43-4.22-2.87 1.16.01.01c-.52-.4-1.09-.74-1.71-1h.01L14.44 2H9.57l-.44 3.07h.01c-.62.26-1.19.6-1.71 1l.01-.01-2.88-1.17-2.44 4.22 2.44 1.92.01-.02c-.04.33-.07.65-.07.99 0 .34.03.68.08 1.01l-.01-.02-2.1 1.65-.33.26 2.43 4.2 2.88-1.15-.02-.04c.53.41 1.1.75 1.73 1.01h-.03L9.58 22h4.85s.03-.18.06-.42l.38-2.65h-.01c.62-.26 1.2-.6 1.73-1.01l-.02.04 2.88 1.15 2.43-4.2s-.14-.12-.33-.26l-2.11-1.66zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                    <button
                      aria-label="Delete"
                      class="MuiButtonBase-root MuiIconButton-root WithNoOpener-root WithNoOpener-root"
                      tabindex="0"
                      title="Delete"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M6 21h12V7H6v14zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="MuiCardContent-root"
              >
                <div
                  class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
                  >
                    <p
                      class="MuiTypography-root WithStyles(ForwardRef(Typography))-root WithStyles(ForwardRef(Typography))-root WrappedTypography-root WrappedTypography-root MuiTypography-body1"
                    >
                      Extract MGRS coordinates, optionally ignoring MGRS coordinates that could be dates
                    </p>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Insert Processors"
        class="MuiButtonBase-root"
        tabindex="0"
        title="Insert Processors"
        type="button"
      >
        <div
          class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
        >
          <div
            class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root Styled(Styled(MuiBox))-root Styled(Styled(MuiBox))-root"
          />
        </div>
        <div
          class="MuiBox-root MuiBox-root Styled(MuiBox)-root Styled(MuiBox)-root"
          style="opacity: 0; visibility: hidden;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
